Use memory mapped files to save the data during instrumentation.