@@ -12,6 +12,7 @@ case "$1" in
     "dacapo")
     		BENCH=dacapo-23.11-MR2-chopin.jar ;;
     "ren")
+    		FLAGS="-r 1"
         BENCH=renaissance-gpl-0.16.0.jar ;;
     *)
     quit ;;
@@ -36,8 +37,9 @@ DISL_BYPASS=lib/disl-bypass.jar
 PROFILER=build/profiler.jar
 
 java -agentpath:$AGENT_PATH --patch-module java.base=$DISL_BYPASS \
+-Djava.security.manager=allow \
 --add-exports java.base/ch.usi.dag.disl.dynamicbypass=ALL-UNNAMED \
 -Xbootclasspath/a:$DISL_BYPASS:$PROFILER -noverify -cp $PROFILER \
 -Xmx6G -Xms6G \
--jar $BENCH $2
+-jar $BENCH $2 $FLAGS
 
